# guarwatch_website

./: -w  .env.example  .gitignore  CALISTIRMA_REHBERI.md  README.md  WEBSITE_BUILD_GUIDE.md  docker-compose.quicktunnel.yml  docker-compose.yml  package-lock.json  start-jetson-test.ps1
agent/: Dockerfile.dev  guardwatch_agent.py  install_agent.sh  pyproject.toml
agent/agent/: config.py  main.py  server.py  simulate_event.py  term_relay.py  tunnel.py  uploader.py
agent/jetson/: README.md  RUNBOOK.md  requirements.txt  simulate_event.py  uploader.py
agent/tests/: test_server.py  test_uploader.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirments.txt  ruff.toml
backend/app/: config.py  db.py  main.py
backend/app/alembic/versions/: 0001_devices_and_events.py  0002_device_token_hash.py  0003_event_history_index.py  (+5 more)
backend/app/core/: auth.py  deps.py  security.py
backend/app/models/: __init__.py  camera.py  camera_group.py  device.py  event.py  location.py  role.py  user.py  webhook.py
backend/app/routers/: auth.py  cameras.py  devices.py  events.py  groups.py  locations.py  relay_bridge.py  roles.py  users.py  webhooks.py  ws_panel.py
backend/app/schemas/: event.py  webhook.py
backend/app/services/: device_store.py  event_store.py  image_validator.py  panel_hub.py  rbac.py  upload_log.py  webhook_service.py
backend/tests/: conftest.py  test_auth.py  test_bootstrap.py  test_cameras.py  test_devices_router.py  test_event_store.py  test_events_router.py  test_health.py  test_locations.py  test_panel_hub.py  test_security.py  test_webhooks.py
(+81 files in other folders)
